Renamed Azure project
Added SetupType to Bootstrapper
Made protected fields in TestsBase classes to properties
Fixed repository tests
Fixed issue with GetBySecondaryId in the repository
Created Settings class and Debug and Test variants

--- a/Starter.Framework/Starter.Framework.csproj
+++ b/Starter.Framework/Starter.Framework.csproj
@@ -107,7 +107,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ISettings.cs" />
     <Compile Include="Entities\Settings.cs" />
+    <Compile Include="Entities\SettingsDebug.cs" />
+    <Compile Include="Entities\SettingsTest.cs" />
     <Compile Include="Extensions\ByteExtensions.cs" />
     <Compile Include="Extensions\DbCommandExtensions.cs" />
     <Compile Include="Extensions\DbRecordExtensions.cs" />
