--- a/Starter.WPF/Starter.WPF.csproj
+++ b/Starter.WPF/Starter.WPF.csproj
@@ -122,7 +122,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starter.Bootstrapper\Starter.Bootstrapper.csproj">
