--- a/Starter.MessageBroker.Consumer/Starter.MessageBroker.Consumer.csproj
+++ b/Starter.MessageBroker.Consumer/Starter.MessageBroker.Consumer.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
